# HIA

./: .gitignore  README.MD  README.md  dataIngress.py  dbConnection.py  eia.py  esi.py  go.mod  initial.py  main.go  manage.py  pyproject.toml  sqlitestuff.py  threadedEmbededWebView.py  uiElements.py  updateSDE.py  wails.json
EIA/: asgi.py  config.py  settings.py  urls.py  wsgi.py
EIA/static/: base.css
EIA/templates/: base.html
Legacy/: dataIngress.py  initial.py
about/: apps.py  views.py
about/templates/: landing.html
blueprintViewer/: apps.py  urls.py  views.py
errorinator/: apps.py  views.py
errorinator/templates/: errorinator.html
externalConnections/: apps.py  config.py  externalConnections.py
frontend/: index.html  package-lock.json
industryWebProject/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
introOfIntroness/: apps.py  views.py
introOfIntroness/templates/: landing.html
logs/: django.log.2023-05-25
old/: manage.py  requirements.txt
old/Legacy/: dbConnection.py  initial.py
old/blueprintViewer/: admin.py  models.py  urls.py  views.py
old/blueprintViewer/templates/: blueprintDetail.html  blueprintIndex.html  blueprintResult.html
old/industryWebProject/: .env.example
old/sde/: models.py
oldStaticFiles/: base.html  landing.html  pi.html
pi/: views.py
static/: app.css  base.css
