[tool.poetry]
name = "eia"
version = "0.0.1"
description = "Managing EVE industry"
authors = ["Tõnis Vaino <vaino.tonis@gmail.com>"]
license = "no-use"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-eveuniverse = "^0.19.1"
pyqtwebengine = "^5.15.6"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
