[tool.poetry]
name = "eia"
version = "0.0.1"
description = "Managing EVE industry"
authors = ["Tõnis Vaino <headtrollhunter@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
